[package]
name = "web-assembly-whipshout"
version = "0.7.0"
authors = ["Eduardo Sánchez <whipshout@gmail.com>"]
edition = "2018"
description = "Learning Web Assembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
lto = true
