[package]
name = "web-assembly-whipshout"
version = "0.8.0"
authors = ["Eduardo Sánchez <whipshout@gmail.com>"]
edition = "2018"
description = "Learning Web Assembly"
license = "MIT OR Apache-2.0"
homepage = "https://www.npmjs.com/package/web-assembly-whipshout"
repository = "https://github.com/Whipshout/WebAssemblyTest"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
lto = true
