[package]
name = "web-assembly-whipshout"
version = "1.0.0"
authors = ["Eduardo Sánchez <whipshout@gmail.com>"]
edition = "2018"
description = "Learning Web Assembly"
license = "MIT OR Apache-2.0"
homepage = "https://www.npmjs.com/package/web-assembly-whipshout"
repository = "https://github.com/Whipshout/WebAssemblyTest"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
web-sys = { version = "0.3.54", features = ['console'] }
js-sys = "0.3.54"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
lto = true
